[package]
name = "hc-tel"
version = "0.0.1-alpha.0"
edition = "2021"

[dependencies]
once_cell = "1.18.0"
opentelemetry = { version = "0.19.0", features = [ "trace", "metrics", "rt-tokio" ] }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-opentelemetry = { version = "0.19.0", features = [ "metrics" ] }
tracing-subscriber = "0.3.17"
